tests/snapshots/run_wpt_conformance__coreml_expand_float16_2D_tensor_to_2D__1st_dimension_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
expand.https.any.js expand float16 2D tensor to 2D (1st dimension), coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: MultiArray shape (1 x 6) does not match the shape (4 x 1) specified in the model description

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    expandInput: f16[1, 6];
  }

  nodes {
    [expandOutput] = expand(expandInput, label="");
  }

  outputs { expandOutput; }
}
